--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <main class="content">
       <section class="lead debug-border">
         <h1 class="lead__title debug-border">Путешествия по России</h1>
-        <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img class="lead__img" alt="спящая в поезде" src="images/lead-polka.jpg">
         <p class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</p>
 
       </section>
       <section class="intro">
-        <h1 class="intro__title">Чего мы там не видели?</h1>
+        <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
           но только 36% планируют провести отпуск в родной стране.
           Мол, чего мы тут, дома, не видели? На самом деле,
@@ -103,10 +103,10 @@
       <section class="places">
         <div class="place debug-border">
           <figure class="place__item debug-border">
-            <h1 class="place__title debug-border">Куршская коса</h1>
+            <h2 class="place__title debug-border">Куршская коса</h2>
           </figure>
           <figure class="place__item debug-border">
-            <h2 class="place__url-heading debug-border">URL</h2>
+            <h3 class="place__url-heading debug-border">URL</h3>
             <a class="place__link debug-border" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </figure>
           <figure class="place__item debug-border">
@@ -127,10 +127,10 @@
 
         <div class="place debug-border">
           <figure class="place__item debug-border">
-            <h1 class="place__title debug-border">Кольский</h1>
+            <h2 class="place__title debug-border">Кольский</h2>
           </figure>
           <figure class="place__item debug-border">
-            <h2 class="place__url-heading debug-border">URL</h2>
+            <h3 class="place__url-heading debug-border">URL</h3>
             <a class="place__link debug-border" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
               target="_blank">National Geographic</a>
           </figure>
@@ -154,10 +154,10 @@
 
         <div class="place debug-border">
           <figure class="place__item debug-border">
-            <h1 class="place__title debug-border">Алтай</h1>
+            <h2 class="place__title debug-border">Алтай</h2>
           </figure>
           <figure class="place__item debug-border">
-            <h2 class="place__url-heading debug-border">URL</h2>
+            <h3 class="place__url-heading debug-border">URL</h3>
             <a class="place__link debug-border" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
               target="_blank">Facebook</a>
           </figure>
@@ -180,10 +180,10 @@
 
         <div class="place debug-border">
           <figure class="place__item debug-border">
-            <h1 class="place__title debug-border">Зимний Байкал</h1>
+            <h2 class="place__title debug-border">Зимний Байкал</h2>
           </figure>
           <figure class="place__item debug-border">
-            <h2 class="place__url-heading debug-border">URL</h2>
+            <h3 class="place__url-heading debug-border">URL</h3>
             <a class="place__link debug-border" href="https://vk.com/baikalmile"
               target="_blank">https://vk.com/baikalmile</a>
           </figure>
@@ -205,10 +205,10 @@
 
         <div class="place debug-border">
           <figure class="place__item debug-border">
-            <h1 class="place__title debug-border">Карелия</h1>
+            <h2 class="place__title debug-border">Карелия</h2>
           </figure>
           <figure class="place__item debug-border">
-            <h2 class="place__url-heading debug-border">URL</h2>
+            <h3 class="place__url-heading debug-border">URL</h3>
             <a class="place__link debug-border" href="http://vodlozero.ru/" target="_blank">http://vodlozero.ru/</a>
           </figure>
           <figure class="place__item debug-border">
@@ -229,7 +229,7 @@
       </section>
       <section class="cover debug-border">
         <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-          <h1 class="cover__title debug-border">До Байкала «на собаках»</h1>
+          <h2 class="cover__title debug-border">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе —
             путешествие от столицы до Байкала на электричках.</p>
         </a>
