--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           «Ладу» и проехала 20 тысяч километров по родной стране.
           Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов <span class="intro__item intro__item_normal">11</span></li>
-          <li>Объектов природного наследия ЮНЕСКО <span class="intro__item intro__item_normal">12</span></li>
-          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__item intro__item_normal">16</span></li>
-          <li>Природных заповедников <span class="intro__item intro__item_normal">105</span></li>
-          <li>Аэропортов <span class="intro__item intro__item_normal">241</span></li>
+          <li>Часовых поясов <span class="intro__item">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__item">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__item">16</span></li>
+          <li>Природных заповедников <span class="intro__item">105</span></li>
+          <li>Аэропортов <span class="intro__item">241</span></li>
         </ul>
       </section>
       <section class="photo-grid">
